Use DynamoItemDao with map component
